deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${namespaceName}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${deploymentName}
  namespace: ${namespaceName}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${labelName}
  template:
    metadata:
      labels:
        app: ${labelName}
    spec:
      containers:
      - name: ${containerName}
        image: ${imageSource}
        imagePullPolicy: Always
        ports:
        - containerPort: ${containerPort}
