service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-dep-svc
  namespace: ${namespaceName}
spec:
  selector:
    app: ${labelName}    # Selecting PODS with those Labels
  ports:
    - protocol  : TCP
      port      : ${svcPort}  # Port on SVC
      targetPort: ${containerPort}  # Port on POD
  type: LoadBalancer
